@@ -237,6 +237,38 @@ name|format
 argument_list|)
 return|;
 block|}
+comment|/**    * Convert UnixTime to a string format.    *     * @param unixtime    *          The number of seconds from 1970-01-01 00:00:00    * @return a String in default format specified.    */
+specifier|public
+name|Text
+name|evaluate
+parameter_list|(
+name|LongWritable
+name|unixtime
+parameter_list|)
+block|{
+if|if
+condition|(
+name|unixtime
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+literal|null
+return|;
+block|}
+return|return
+name|eval
+argument_list|(
+name|unixtime
+operator|.
+name|get
+argument_list|()
+argument_list|,
+name|defaultFormat
+argument_list|)
+return|;
+block|}
 comment|/**    * Convert UnixTime to a string format.    *     * @param unixtime    *          The number of seconds from 1970-01-01 00:00:00    * @param format    *          See    *          http://java.sun.com/j2se/1.4.2/docs/api/java/text/SimpleDateFormat    *          .html    * @return a String in the format specified.    */
 specifier|public
 name|Text
